--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div id="divzapzap">ORÇAMENTOS ENG. ALCIDES
         </div>
     </a>
-
-    <a href='whatsapp://send?text=*ROP ENGENHARIA:* bit.ly/rop2engenharia'>
+    
+    <a href='whatsapp://send?text=Precisando ligar pra gente e não lembra o número? Salve o link de nosso cartão mobile em seu celular.Tenha acesso ao nosso Telefone, WhatsApp e E-mail a um toque! *Rop Engenharia:* bit.ly/rop2engenharia'>
         <div id="divcompartilhar">COMPARTILHAR ROP ENGENHARIA
         </div>
     </a>
