--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-
+    <meta name="language" content="pt-br">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="ROP ENGENHARIA E SOLUÇÕES">
+    <meta property="og:image" content="https://uploaddeimagens.com.br/images/001/276/321/original/avatarrop2.png?1517687927">
+    
     <title>ROP ENGENHARIA E SOLUÇÕES</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/stilo.css">
@@ -37,7 +40,7 @@
         </div>
     </a>
     
-    <a href='whatsapp://send?text=Precisando ligar pra gente e não lembra o número? Salve o link de nosso cartão mobile em seu celular.Tenha acesso ao nosso Telefone, WhatsApp e E-mail a um toque! *Rop Engenharia:* bit.ly/rop2engenharia'>
+    <a href='whatsapp://send?text=*Cartão de Visitas Mobile - Rop Engenharia:* http://bit.ly/rop2engenharia'>
         <div id="divcompartilhar">COMPARTILHAR ROP ENGENHARIA
         </div>
     </a>
