--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </a>
     
-    <a href='whatsapp://send?text=*Cartão de Visitas Mobile - Rop Engenharia:* http://bit.ly/rop2engenharia'>
+    <a href='whatsapp://send?text=*Cartão de Visitas Mobile - Rop Engenharia:* http://rop2engenharia.meucvm.com.br'>
         <div id="divcompartilhar">COMPARTILHAR ROP ENGENHARIA
         </div>
     </a>
@@ -49,7 +49,6 @@
         <div class="propaganda">by cartaodevisitasmobile.com.br</div>
     </a>
 
-    -
 </body>
 
 </html>
