--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113411563-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-113411563-5');
+
+    </script>
+
     <meta charset="UTF-8">
     <meta name="language" content="pt-br">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="ROP ENGENHARIA E SOLUÇÕES">
     <meta property="og:image" content="https://uploaddeimagens.com.br/images/001/276/321/original/avatarrop2.png?1517687927">
-    
+
     <title>ROP ENGENHARIA E SOLUÇÕES</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/stilo.css">
@@ -39,7 +53,7 @@
         <div id="divzapzap">ORÇAMENTOS ENG. ALCIDES
         </div>
     </a>
-    
+
     <a href='whatsapp://send?text=*Cartão de Visitas Mobile - Rop Engenharia:* http://rop2engenharia.meucvm.com.br'>
         <div id="divcompartilhar">COMPARTILHAR ROP ENGENHARIA
         </div>
